@@ -91,7 +91,7 @@ CONFIG_H_IN = $(patsubst %,%/config.h.in,$(SUBDIRS_CONFIG_H))
 config-h-in : $(CONFIG_H_IN)
 
 $(CONFIG_H_IN) : %/config.h.in : %/configure.in $(AUTOCONF_FILES)
-	cd $*; $(AUTOHEADER) --include=$(CURDIR)
+	cd $* && $(AUTOHEADER) --include=$(CURDIR)
 
 woe32-h : avcall/avcall.h.msvc avcall/avcall.h.mingw32 \
 	vacall/config.h.msvc vacall/config.h.mingw32 vacall/vacall.h.msvc \
@@ -108,64 +108,64 @@ woe32-c : avcall/avcall-i386-msvc.c avcall/avcall-i386-mingw32.c \
 	callback/vacall_r/vacall-i386-msvc.c
 
 avcall/avcall.h.msvc : avcall/avcall.h.in
-	cd avcall ; $(MAKE) -f Makefile.devel avcall.h.msvc
+	cd avcall && $(MAKE) -f Makefile.devel avcall.h.msvc
 
 avcall/avcall.h.mingw32 : avcall/avcall.h.in
-	cd avcall ; $(MAKE) -f Makefile.devel avcall.h.mingw32
+	cd avcall && $(MAKE) -f Makefile.devel avcall.h.mingw32
 
 avcall/avcall-i386-msvc.c : avcall/avcall-i386-macro.S avcall/asmi386.sh
-	cd avcall ; $(MAKE) -f Makefile.devel avcall-i386-msvc.c
+	cd avcall && $(MAKE) -f Makefile.devel avcall-i386-msvc.c
 
 avcall/avcall-i386-mingw32.c : avcall/avcall-i386-macro.S avcall/asmi386.sh
-	cd avcall ; $(MAKE) -f Makefile.devel avcall-i386-mingw32.c
+	cd avcall && $(MAKE) -f Makefile.devel avcall-i386-mingw32.c
 
 vacall/config.h.msvc : vacall/config.h.in
-	cd vacall ; $(MAKE) -f Makefile.devel config.h.msvc
+	cd vacall && $(MAKE) -f Makefile.devel config.h.msvc
 
 vacall/config.h.mingw32 : vacall/config.h.in
-	cd vacall ; $(MAKE) -f Makefile.devel config.h.mingw32
+	cd vacall && $(MAKE) -f Makefile.devel config.h.mingw32
 
 vacall/vacall.h.msvc : vacall/vacall.h.in
-	cd vacall ; $(MAKE) -f Makefile.devel vacall.h.msvc
+	cd vacall && $(MAKE) -f Makefile.devel vacall.h.msvc
 
 vacall/vacall.h.mingw32 : vacall/vacall.h.in
-	cd vacall ; $(MAKE) -f Makefile.devel vacall.h.mingw32
+	cd vacall && $(MAKE) -f Makefile.devel vacall.h.mingw32
 
 vacall/vacall-i386-msvc.c : vacall/vacall-i386-macro.S vacall/asmi386.sh
-	cd vacall ; $(MAKE) -f Makefile.devel vacall-i386-msvc.c
+	cd vacall && $(MAKE) -f Makefile.devel vacall-i386-msvc.c
 
 vacall/vacall-i386-mingw32.c : vacall/vacall-i386-macro.S vacall/asmi386.sh
-	cd vacall ; $(MAKE) -f Makefile.devel vacall-i386-mingw32.c
+	cd vacall && $(MAKE) -f Makefile.devel vacall-i386-mingw32.c
 
 trampoline/config.h.msvc : trampoline/config.h.in
-	cd trampoline ; $(MAKE) -f Makefile.devel config.h.msvc
+	cd trampoline && $(MAKE) -f Makefile.devel config.h.msvc
 
 trampoline/config.h.mingw32 : trampoline/config.h.in
-	cd trampoline ; $(MAKE) -f Makefile.devel config.h.mingw32
+	cd trampoline && $(MAKE) -f Makefile.devel config.h.mingw32
 
 callback/vacall_r/config.h.msvc : callback/vacall_r/config.h.in
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/config.h.msvc
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/config.h.msvc
 
 callback/vacall_r/config.h.mingw32 : callback/vacall_r/config.h.in
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/config.h.mingw32
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/config.h.mingw32
 
 callback/vacall_r/vacall_r.h.msvc : callback/vacall_r/vacall_r.h.in
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/vacall_r.h.msvc
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/vacall_r.h.msvc
 
 callback/vacall_r/vacall_r.h.mingw32 : callback/vacall_r/vacall_r.h.in
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/vacall_r.h.mingw32
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/vacall_r.h.mingw32
 
 callback/vacall_r/vacall-i386-msvc.c : callback/vacall_r/vacall-i386-macro.S callback/vacall_r/asmi386.sh
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/vacall-i386-msvc.c
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/vacall-i386-msvc.c
 
 callback/vacall_r/vacall-i386-mingw32.c : callback/vacall_r/vacall-i386-macro.S callback/vacall_r/asmi386.sh
-	cd callback ; $(MAKE) -f Makefile.devel vacall_r/vacall-i386-mingw32.c
+	cd callback && $(MAKE) -f Makefile.devel vacall_r/vacall-i386-mingw32.c
 
 callback/trampoline_r/config.h.msvc : callback/trampoline_r/config.h.in
-	cd callback ; $(MAKE) -f Makefile.devel trampoline_r/config.h.msvc
+	cd callback && $(MAKE) -f Makefile.devel trampoline_r/config.h.msvc
 
 callback/trampoline_r/config.h.mingw32 : callback/trampoline_r/config.h.in
-	cd callback ; $(MAKE) -f Makefile.devel trampoline_r/config.h.mingw32
+	cd callback && $(MAKE) -f Makefile.devel trampoline_r/config.h.mingw32
 
 COMPILERS="cc -O" "gcc -freg-struct-return" "gcc -fpcc-struct-return"
 
