@@ -26,7 +26,8 @@
 
 2008-09-26  Sam Steingold  <sds@gnu.org>
 
-	* Makefile.in: use "&&" instead of ";" for all targets
+	* Makefile.in, callback/Makefile.devel, callback/Makefile.in:
+	use "&&" instead of ";" for all targets
 
 2008-07-13  Sam Steingold  <sds@gnu.org>
 
